--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="logo">MA1</div>
         <nav class="nav">
             <ul class="nav__inner">
