--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 
 <head>
     <meta charset="UTF-8">
@@ -9,51 +9,66 @@
     <title>deanna-berg-css-frameworks-ma1</title>
 </head>
 
-<body>
-    <header class="header">
-        <div class="logo">MA1</div>
-        <nav class="nav">
-            <ul class="nav__inner">
-                <li class="nav__item"><a href="#" class="nav__link">home</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">about</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Page Heading</h1>
-        <div class="grid">
-            <div class="grid__item">
-                <div class="grid__item__box"></div>
-            </div>
-            <div class="grid__item">
-                <div class="grid__item__box"></div>
-            </div>
-            <div class="grid__item">
-                <div class="grid__item__box"></div>
-            </div>
-            <div class="grid__item">
-                <div class="grid__item__box"></div>
-            </div>
-            <div class="grid__item">
-                <div class="grid__item__box"></div>
-            </div>
-            <div class="grid__item">
-                <div class="grid__item__box"></div>
-            </div>
-            <div class="grid__item">
-                <div class="grid__item__box"></div>
-            </div>
-            <div class="grid__item">
-                <div class="grid__item__box"></div>
-            </div>
+<body class="d-flex flex-column h-100">
+    <header>
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">MA1</a>
+                <button class="navbar-toggler collapsed" type="button">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item"><a href="#" class="nav-link active">home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">about</a></li>
+                    </ul>
+                </div>
 
+            </div>
+        </nav>
+        </div>
+        </div>
+    </header>
+    <main class="flex-shrink-0">
+        <div class="container">
+            <h1>Page Heading</h1>
+            <div class="container">
+                <div class="row gy-5">
+                    <div class="col">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col">
+                        <div class="box box__white"></div>
+                    </div>
+                    <div class="col">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col">
+                        <div class="box box__red"></div>
+                    </div>
+                    <div class="col">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col">
+                        <div class="box box__white"></div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </main>
 
-    <footer>
-        <a href="#" class="footer__link">hello@email.com</a>
-        <a href="#" class="footer__link">Copywright 2020</a>
-    </footer>
+    <footer class="footer mt-auto py-3">
+        <div class="container footer__container">
+            <p>hello@email.com</p>
+            <p>Copywright 2020</p>
+        </div>
     </footer>
 
 </body>
