--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="d-flex flex-column h-100">
     <header>
         <nav class="navbar navbar-expand-md">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand" href="#">MA1</a>
                 <button class="navbar-toggler collapsed" type="button">
                     <span class="navbar-toggler-icon"></span>
